# online_cinema

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dockerfiles/: Dockerfile
src/: __init__.py  config.py  database.py  exceptions.py  global_vars.py  main.py  migrate_data_to_elastic.py  schemas.py  settings.py  utils.py
src/actors/: __init__.py  router.py
src/cinema/: __init__.py  config.py  data_types.py  models.py  repositories.py  services.py
src/cinema/datastructs/: from_elastic_to_python.py
src/cinema/routers/: __init__.py  films.py  persons.py
src/cinema/schemas/: films.py  persons.py  serializers.py
src/cinema/serializers/: from_elastic_to_python.py  from_python_to_json.py
src/cinema/to_json_schemas/: __init__.py  films.py  persons.py  serializers.py
src/elasticsearch/: __init__.py  config.py  connection.py  indexes.py  utils.py
src/elasticsearch_app/: __init__.py  cli.py  cli_utils.py  config.py  connection.py  data_types.py  dataclasses.py  elastic_communication.py  handle_indices.py  indices.py  migrate_data_to_elastic.py  utils.py
src/elasticsearch_app/kinopoisk/: __init__.py  migrate_to_elastic.py
src/films/: __init__.py  models.py  repository.py  router.py  service.py
src/general_usage/: config.py  custom_model_fields.py  database.py  jsonapi_schemas.py  logging_config.py  sa_models.py  schemas.py  settings.py
src/movies/: __init__.py  router.py
src/person/: __init__.py  models.py  repository.py  router.py  service.py
(+6 files in other folders)
