[tool.poetry]
name = "online-cinema"
version = "0.1.0"
description = "main page for online cinema"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
aiosqlite = "0.20.0"
elasticsearch = "8.17.1"
fastapi = "0.115.7"
pydantic = "2.10.5"
sqlalchemy = "2.0.37"
typer = "0.15.1"
backoff = ">=2.2.1,<3.0.0"
pydantic-settings = ">=2.8.0,<3.0.0"
uvicorn = "^0.34.0"
aiohttp = "^3.11.13"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
